# langX

./: .gitbook.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  a.lx  b.lx  changelog  changelog.md  checklibdepends.lx  cleanMods  compileMods  copyModProjects.sh  installlib.lx  langX.properties  langX.sdf  langX.sln  langX.vcxproj  langX.vcxproj.filters  launch.properties  log4cpp.properties  makefile
3rd/: langx-npp.xml
cmake/: FindMySQL.cmake  FindlangX.cmake
compile-helper/: cleanMods.lx  compileMods.lx  define.lx  firstCompileMods.lx  fullCleanMods.lx  installMods.lx
docs/: LANGS.md  README.md  SUMMARY.md  zh_README.md  编译帮助.txt
docs/en/: README.md  SUMMARY.md
docs/zh/: BUG LIST.md  README.md  SUMMARY.md  langX - 新的语法结构.emmx  开发需知.txt  第三方库增加帮助.md  编译帮助.md
help/: 第三方库增加帮助.txt  编译帮助.txt
include/: ASTLeaf.h  ASTNode.h  ASTRoot.h  Allocator.h  ClassInfo.h  Config.h  DestroyedObject.h  Environment.h  Exception.h  ExecNode.h  ExecNodeImpl.h  Execption.h  Function.h  InnerFunction.h  LogManager.h  NodeCreator.h  NullObject.h  Number.h  Object.h  Program.h  RegFunctions.h  RegObjects.h  ScriptModule.h  StackTrace.h  String.h  StringType.h  Token.h  TypeHelper.h  Utils.h  X3rdModule.h  XArray.h  XNameSpace.h  YLlangX.h  langX.h  langXCommon.h  langXObject.h  langXObjectRef.h  langXSimple.h  langXThread.h  langXrtlib.h
lib/log4cpp/: config.status  libtool  log4cpp-config  log4cpp.pc
modProjects/: Readme
modProjects/langX-Core/: CMakeLists.txt  ReadMe  langX-Core.vcxproj  langX-Core.vcxproj.filters  makefile
modProjects/langX-Core/source/: Application.cpp  ByteArray.cpp  CMakeLists.txt  Convert.cpp  CoreModule.cpp  DateTime.cpp  Default.cpp  File.cpp  FileStream.cpp  Iterator.cpp  List.cpp  Map.cpp  Matcher.cpp  Math.cpp  Pattern.cpp  Queue.cpp  Random.cpp  Set.cpp  Stack.cpp  Stream.cpp  StringBuilder.cpp  Thread.cpp  Vector.cpp
modProjects/langX-Core/source/collection/: List.cpp  Map.cpp  Queue.cpp  Set.cpp  Stack.cpp  Vector.cpp
modProjects/langX-Core/source/default/: DateTime.cpp  Default.cpp  TimeSpan.cpp
modProjects/langX-Json/: CMakeLists.txt  ReadMe  langX-Json.vcxproj  langX-Json.vcxproj.filters  makefile
modProjects/langX-Json/include/: JsonModule.h  RegJsonModule.h
modProjects/langX-Json/source/: CMakeLists.txt  JsonArray.cpp  JsonModule.cpp  JsonObject.cpp  default.cpp
modProjects/langX-Mysql/: CMakeLists.txt  langX-Mysql.vcxproj  langX-Mysql.vcxproj.filters  makefile
modProjects/langX-Mysql/include/: MysqlModule.h  RegMysqlModule.h
modProjects/langX-Mysql/source/: CMakeLists.txt  DataRow.cpp  DataTable.cpp  MysqlClient.cpp  MysqlModule.cpp
modProjects/langX-Python/: CMakeLists.txt  langX-Python.vcxproj  langX-Python.vcxproj.filters  makefile
modProjects/langX-Python/source/: CMakeLists.txt  PyException.cpp  PyObject.cpp  PyObjectEasy.cpp  PyObjectType.cpp  PyResult.cpp  PySomeFunction.cpp  PythonHook.cpp  PythonLib.cpp  PythonModule.cpp
modProjects/langX-Python/source/pyModule/: PyDateTime.cpp
modProjects/langX-Redis/: CMakeLists.txt  langX-Redis.vcxproj  langX-Redis.vcxproj.filters
modProjects/langX-Redis/source/: CMakeLists.txt  RedisClient.cpp  RedisExceptions.cpp  RedisModule.cpp
modProjects/langX-Redis1/: langX-Redis.vcxproj  langX-Redis.vcxproj.filters
modProjects/langX-Zlib/: CMakeLists.txt  langX-Zlib.vcxproj  langX-Zlib.vcxproj.filters
modProjects/langX-Zlib/source/: CMakeLists.txt  Zip.cpp  ZipFile.cpp  Zlib.cpp  ZlibModule.cpp
modProjects/langX-libevent/: CMakeLists.txt  langX-libevent.vcxproj  langX-libevent.vcxproj.filters  makefile
modProjects/langX-libevent/include/: BytesDecoder.h  BytesEncoder.h  DefaultBytesDecoder.h  DefaultBytesEncoder.h  DefaultNetPacket.h  RegHttpServer.h  ReglibeventModule.h  libeventModule.h
modProjects/langX-libevent/source/: BytesDecoder.cpp  BytesEncoder.cpp  CMakeLists.txt  DefaultBytesDecoder.cpp  DefaultBytesEncoder.cpp  DefaultNetPacket.cpp  DefaultNetPacketX.cpp  EventBase.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpServerRoute.cpp  TcpClient.cpp  TcpServer.cpp  Timer.cpp  TimerEvent.cpp  libeventModule.cpp
notImplementation/: Logger.lx  Matcher.lx  Pattern.lx  __with.lx  alias.lx  datetime.lx  draft.lx  excelUsage.lx  extendSymbols.lx  extendsMethods1.lx  redisUsage.lx  test.xlsx  timer.lx  trello.lx  zipUsage.lx
notImplementation/build-in-class/: application.lx
notImplementation/imgui/: checkbox.lx  common.lx  form.lx  label.lx  layout.lx  panel.lx  textbox.lx
notImplementation/trello-helper/: Readme.md  boardImpl.lx  cardImpl.lx  clientImpl.lx  define.lx  draft.lx  listImpl.lx  main.lx  package.lx  testUsage.lx  trello.lx
rtlib/python/: main.lx  package.lx  pyDateTime.lx
rtlib/redis/: RedisClient.lx
rtlib/trello-helper/: Readme.md  boardImpl.lx  cardImpl.lx  checkListImpl.lx  clientImpl.lx  customFieldImpl.lx  define.lx  (+5 more)
scripts/: Math.lx  Student.h.lx  Student.lx  a.lx  app1.lx  arith1.lx  array1.lx  array2.lx  arraycall1.lx  b.lx  bitopr1.lx  calc.lx  class1.lx  class2.lx  class3.lx  class4.lx  classauto1.lx  comment_test.lx  const1.lx  continue1.lx  envclose1.lx  escape1.lx  exception1.lx  exception2.lx  exception3.lx  exception4.lx  extendSymbols.lx  extends1.lx  function1.lx  functionRef1.lx  gctest1.lx  ifelseif.lx  include1.lx  include2.lx  lambda1.lx  lambda2.lx  lambda3.lx  local1.lx  moreif.lx  namespcae1.lx  (+41 more)
source/: ASTLeaf.cpp  ASTNode.cpp  ASTRoot.cpp  Allocator.cpp  CMakeLists.txt  ClassInfo.cpp  Config.cpp  DestroyedObject.cpp  Environment.cpp  Exception.cpp  ExecNode.cpp  Execption.cpp  Function.cpp  InnerFunction.cpp  LogManager.cpp  NodeCreator.cpp  NullObject.cpp  Number.cpp  Object.cpp  Program.cpp  RegFunctions.cpp  RegObjects.cpp  ScriptModule.cpp  StackTrace.cpp  String.cpp  StringType.cpp  Token.cpp  TypeHelper.cpp  Utils.cpp  X3rdModule.cpp  XArray.cpp  XNameSpace.cpp  YLlangX.cpp  langX.cpp  langXObject.cpp  langXObjectRef.cpp  langXThread.cpp  langXrtlib.cpp
source/extend/: langXLogger.cpp  langXString.cpp
source/node/: ExecAssignNode.cpp  ExecBaseMathNode.cpp  ExecLogicNode.cpp  ExecOOPNode.cpp
(+104 files in other folders)
