cmake_minimum_required(VERSION 3.11)
SET(CMAKE_MODULE_PATH APPEND "${CMAKE_SOURCE_DIR}/../../cmake/" )

PROJECT(LANGX_JSON)

SET(CMAKE_BUILD_TYPE RelWithDebInfo)
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_C_COMPILER       g++ )
ADD_DEFINITIONS(-std=c++11)

ADD_SUBDIRECTORY(source target)
